tests/ui/type-alias-impl-trait/constrain_in_projection2.current.stderr
error[E0277]: the trait bound `Foo: Trait<Bar>` is not satisfied
  --> $DIR/constrain_in_projection2.rs:28:14
   |
LL |     let x = <Foo as Trait<Bar>>::Assoc::default();
   |              ^^^ unsatisfied trait bound
   |
help: the trait `Trait<Bar>` is not implemented for `Foo`
  --> $DIR/constrain_in_projection2.rs:10:1
   |
LL | struct Foo;
   | ^^^^^^^^^^
   = help: the following other types implement trait `Trait<T>`:
             `Foo` implements `Trait<()>`
             `Foo` implements `Trait<u32>`

error[E0277]: the trait bound `Foo: Trait<Bar>` is not satisfied
  --> $DIR/constrain_in_projection2.rs:28:13
   |
LL |     let x = <Foo as Trait<Bar>>::Assoc::default();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Trait<Bar>` is not implemented for `Foo`
  --> $DIR/constrain_in_projection2.rs:10:1
   |
LL | struct Foo;
   | ^^^^^^^^^^
   = help: the following other types implement trait `Trait<T>`:
             `Foo` implements `Trait<()>`
             `Foo` implements `Trait<u32>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
